cmake_minimum_required(VERSION 3.29)
project(FortranLearning)

add_subdirectory(Arrays)
add_subdirectory("Calling Fortran")
add_subdirectory("Data Structures")
add_subdirectory("Derived Types (Structs)")
add_subdirectory("Elemental")
add_subdirectory("File IO")
add_subdirectory("HelloWorld")
add_subdirectory("Interface")
# add_subdirectory("OpenMP Example") # Build independently from group build
add_subdirectory("Recursion")
add_subdirectory("Simple Variables")